--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "bootstrap/base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Deployment{% endblock %}
+{% block title %}Box-Office revenue - Home{% endblock %}
 
 {% block navbar %}
     <div class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
