Implemented database for saving predictions

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -46,7 +46,7 @@
                     <tr>
                         <td class="text-center">{{ i[0] }}</td>
                         <td class="text-center">{{ i[1] }}</td>
-                        <td ><input style="width:100%" type="number" value="{{ i[2] }}"></td>
+                        <td><label><input name="cor_rev" style="width:100%" type="number" value="{{ i[2] }}"></label></td>
                     <td class="text-center"><button>Update</button></td>
                     </tr>
                 {% endfor %}
