--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -29,7 +29,7 @@
 {% block content %}
     <div class='container'>
         <div class='page-header'>
-            <h1>Here is your previous predictions</h1>
+            <h1>Here are previous predictions</h1>
         </div>
     </div>
 
