--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -42,8 +42,8 @@
         <h3>{% if session.get('pred') %} The predicted worldwide box office value is
             {{ session.get('pred')['pred'] }} $</h3>
 
-            <h4>Probabilities: {{ session.get('pred')['uncertainty'] }}
-        {% else %} {% endif %}</h4>
+
+        {% else %} {% endif %}
 
 
     </div>
