Fixed show as currency and saving to database + typo

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -40,7 +40,7 @@
     <div class='container'>
 
         <h3>{% if session.get('pred') %} The predicted worldwide box office value is
-            {{ session.get('pred')['pred'] }} $</h3>
+            {{ session.get('pred') }} $</h3>
 
 
         {% else %} {% endif %}
