--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,6 +31,11 @@
         <h1 class="text-primary">Predict the value of the box office move by filling out the below information.</h1>
         <label class="label label-info">The information is fed through our trained machine learning model based on
             historical data</label>
+
+
+        <h3 class="mt-3">{% if session.get('pred') %} The predicted worldwide box office value is
+            {{ session.get('pred') }}</h3>
+        {% endif %}
     </div>
 
     <div class='container'>
@@ -38,13 +43,6 @@
     </div>
 
     <div class='container'>
-
-        <h3>{% if session.get('pred') %} The predicted worldwide box office value is
-            {{ session.get('pred') }} $</h3>
-
-
-        {% else %} {% endif %}
-
 
     </div>
 
