--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,7 +1,8 @@
 {% extends "bootstrap/base.html" %}
 
 {% block title %}Box-Office revenue - Dashboard{% endblock %}
-{% block styles %}{{ super() }}<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> {% endblock %}
+{% block styles %}{{ super() }}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> {% endblock %}
 
 {% block navbar %}
     <div class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
@@ -42,14 +43,19 @@
                 <th class="text-center">Update correct revenue</th>
             </tr>
 
-                {% for i in old_pred %}
+            {% for i in old_pred %}
+                <form action="update" method="POST">
                     <tr>
-                        <td class="text-center">{{ i[0] }}</td>
-                        <td class="text-center">{{ i[1] }}</td>
-                        <td><label><input name="cor_rev" style="width:100%" type="number" value="{{ i[2] }}"></label></td>
-                    <td class="text-center"><button>Update</button></td>
+                        <td><input type="text" name="rev_name" value="{{ i[0] }}"></td>
+                        <td class="text-center">{{ i[1] }}<input type="hidden" name="pred" value="{{ i[1] }}"></td>
+                        <td><label><input name="cor_rev" style="width:100%" type="text" value="{{ i[2] }}"></label>
+                        </td>
+                        <td class="text-center">
+                            <button>Update</button>
+                        </td>
                     </tr>
-                {% endfor %}
+                </form>
+            {% endfor %}
 
         </table>
     </div>
