--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
 {% block content %}
 
     <div class='container jumbotron'>
-        <h1 class="text-primary">Predict the value of the box office move by filling out the below information.</h1>
+        <h1 class="text-primary">Predict the value of the box office movie by filling out the below information.</h1>
         <label class="label label-info">The information is fed through our trained machine learning model based on
             historical data</label>
 
